--- a/app/templates/components/search-form.hbs
+++ b/app/templates/components/search-form.hbs
@@ -7,5 +7,5 @@
     <label for="language">Language</label>
     {{input value=language type="text"}}
   </div>
-  <button {{action 'save'}} class="btn">Search</button>
+  <button {{action 'lookUp'}} class="btn">Search</button>
 </form>
