add an app template and format the search form

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,1 +1,12 @@
-{{search-form lookUp="lookUp"}}
+<div class="jumbotron">
+  <div class="container">
+    <h1>YOU DON'T HAVE TO BE A HACKER TO FIND GREAT DEVELOPERS!</h1>
+    {{search-form lookUp="lookUp"}}
+  </div>
+</div>
+
+<div class="container">
+
+  <h3 class="title">SEARCH RESULTS: </h3>
+
+</div>
