--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,29 @@
-{{#link-to 'index'}}Home{{/link-to}}
-{{#link-to 'about'}}About{{/link-to}}
-{{#link-to 'faq'}}FAQ{{/link-to}}
-{{#link-to 'watchlist'}}Watchlist{{/link-to}}
-{{outlet}}
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <div class="navbar-brand">
+        {{#link-to 'index'}}<img alt="GitHire" src="assets/images/githire.png" class="img-responsive nav-bar-image">{{/link-to}}
+      </div>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+
+      <ul class="nav navbar-nav navbar-right">
+        <li>{{#link-to 'watchlist'}}<img src="assets/images/add_watchlist.png" class="img-responsive nav-bar-image" alt="add to watchlist" />{{/link-to}}</li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+
+  {{outlet}}
+
+
+<div class="footer">
+  <div class="container">
+    footer coming soon
+    {{#link-to 'about'}}About{{/link-to}}
+    {{#link-to 'faq'}}FAQ{{/link-to}}
+  </div>
+</div>
