--- a/app/templates/components/search-form.hbs
+++ b/app/templates/components/search-form.hbs
@@ -1,11 +1,13 @@
-<form>
-  <div class="form-group">
-    <label for="location">Location</label>
-    {{input value=location type="text"}}
-  </div>
-  <div class="form-group">
-    <label for="language">Language</label>
-    {{input value=language type="text"}}
-  </div>
-  <button {{action 'lookUp'}} class="btn">Search</button>
-</form>
+<div class="search-form">
+  <form class="form-inline">
+    <div class="form-group">
+      <label for="location">Location</label>
+      {{input value=location type="text" class="form-control"}}
+    </div>
+    <div class="form-group">
+      <label for="language">Language</label>
+      {{input value=language type="text" class="form-control"}}
+    </div>
+    <button {{action 'lookUp'}} class="btn btn-primary">Search</button>
+  </form>
+</div>
