--- a/app/templates/components/search-form.hbs
+++ b/app/templates/components/search-form.hbs
@@ -1,13 +1,36 @@
 <div class="search-form">
-  <form class="form-inline" {{action 'lookUp' on='submit'}}>
+  <form class="form-inline" >
     <div class="form-group">
       <label for="location">Location</label>
-      {{input value=location type="text" class="form-control" required="required"}}
+      <select class="form-control" id="location" onchange={{action "updateLocation" value="target.value"}} >
+        <option value="austin">Austin</option>
+        <option value="boston">Boston</option>
+        <option value="chicago">Chicago</option>
+        <option value="los-angeles">Los Angeles</option>
+        <option value="new-york">New York</option>
+        <option value="philadelphia">Philadelphia</option>
+        <option value="portland" selected="selected">Portland</option>
+        <option value="san-francisco">San Francisco</option>
+        <option value="washington-dc">Washington DC</option>
+      </select>
+
     </div>
     <div class="form-group">
       <label for="language">Language</label>
-      {{input value=language type="text" class="form-control" required="required"}}
+      <select class="form-control" id="language" onchange={{action "updateLanguage" value="target.value"}} >
+        <option value="c#" selected="selected">C#</option>
+        <option value="c++">C++</option>
+        <option value="CSS">CSS</option>
+        <option value="html">HTML</option>
+        <option value="java">Java</option>
+        <option value="JavaScript">JavaScript</option>
+        <option value="PHP">PHP</option>
+        <option value="python">Python</option>
+        <option value="ruby">Ruby</option>
+        <option value="typescript">TypeScript</option>
+      </select>
+
     </div>
-    <button class="btn btn-primary">Search</button>
+    <button {{action 'lookUp'}} class="btn btn-primary">Search</button>
   </form>
 </div>
