clean al lthe try and error code

--- a/app/templates/components/search-form.hbs
+++ b/app/templates/components/search-form.hbs
@@ -2,13 +2,14 @@
   <form class="form-inline" >
     <div class="form-group">
       <label for="location">Location</label>
-      <select class="form-control" id="location" onchange={{action "updateLocation" value="target.value"}} >
+      <select class="form-control" id="location" onchange={{action 'updateLocation' value="target.value"}} >
         <option value="austin">Austin</option>
         <option value="boston">Boston</option>
         <option value="chicago">Chicago</option>
         <option value="los-angeles">Los Angeles</option>
         <option value="new-york">New York</option>
         <option value="philadelphia">Philadelphia</option>
+        <option value="provo">Provo</option>
         <option value="portland" selected="selected">Portland</option>
         <option value="san-francisco">San Francisco</option>
         <option value="washington-dc">Washington DC</option>
@@ -17,13 +18,13 @@
     </div>
     <div class="form-group">
       <label for="language">Language</label>
-      <select class="form-control" id="language" onchange={{action "updateLanguage" value="target.value"}} >
-        <option value="c#" selected="selected">C#</option>
+      <select class="form-control" id="language" onchange={{action 'updateLanguage' value="target.value"}} >
+        <option value="c#">C#</option>
         <option value="c++">C++</option>
         <option value="CSS">CSS</option>
         <option value="html">HTML</option>
         <option value="java">Java</option>
-        <option value="JavaScript">JavaScript</option>
+        <option value="JavaScript" selected="selected">JavaScript</option>
         <option value="PHP">PHP</option>
         <option value="python">Python</option>
         <option value="ruby">Ruby</option>
