Fixes navbar to bottom

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -20,7 +20,7 @@
   {{outlet}}
 
 
-<div class="footer">
+<div class="footer navbar-fixed-bottom">
   <div class="container">
     footer coming soon
     {{#link-to 'about'}}About{{/link-to}}
