--- a/app/templates/results.hbs
+++ b/app/templates/results.hbs
@@ -1,15 +1,36 @@
+<div class="jumbotron">
+  <div class="container">
+    <p>
+      We find only the relevant candidates for your requirments. No more boolean searches, complex filters or spending countless hours scanning through the internet to find the right candidates.
+    </p>
+  </div>
+</div>
 <div class="container">
+  <h1 class="title results">Candidates: </h1>
 
+  <div class="row">
     {{#each model as |developer|}}
-      <div class="panel panel-default">
-        <div class="panel-heading">
-          <h3 class="panel-title">{{developer.login}}</h3>
-        </div>
-        <div class="panel-body">
-          Basic panel example
+      <div class="col-md-4">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h3 class="panel-title title">{{developer.name}}</h3>
+          </div>
+          <div class="panel-body">
+            <p>
+              Username: {{developer.login}}
+            </p>
+            <p>
+              Bio: {{developer.bio}}
+            </p>
+            <p>
+              Email: {{developer.email}}
+            </p>
+          </div>
+          <div class="panel-footer">add to watchlist / send email </div>
         </div>
       </div>
+
     {{/each}}
 
-
+  </div>
 </div>
