adds watchlist service to add and remove users from watchlist

--- a/app/templates/results.hbs
+++ b/app/templates/results.hbs
@@ -26,7 +26,7 @@
               Email: {{developer.email}}
             </p>
           </div>
-          <div class="panel-footer">add to watchlist / send email </div>
+          <div class="panel-footer"><span class="clickable" {{action 'addToWatch' developer}}>add to watchlist</span> / send email </div>
         </div>
       </div>
 
