--- a/app/templates/results.hbs
+++ b/app/templates/results.hbs
@@ -16,11 +16,12 @@
             <h3 class="panel-title title">{{developer.name}}</h3>
           </div>
           <div class="panel-body">
+            <img src="{{developer.avatar_url}}" alt="avatar" class="img-responsive profile-picture"/>
             <p>
-              Username: {{developer.login}}
+              <strong>Username:</strong> {{developer.login}}
             </p>
             <p>
-              Bio: {{developer.bio}}
+              <strong>Bio:</strong> {{developer.bio}}
             </p>
             <p>
               Email: {{developer.email}}
