--- a/app/templates/components/watchlist-tile.hbs
+++ b/app/templates/components/watchlist-tile.hbs
@@ -1,25 +1,27 @@
-<div class="row">
-  {{#each watchUser.users as |developer|}}
-    <div class="col-md-4">
-      <div class="panel panel-default">
-        <div class="panel-heading">
-          <h3 class="panel-title title">{{developer.name}}</h3>
+{{#if watchUser.users}}
+  <div class="row">
+    {{#each watchUser.users as |developer|}}
+      <div class="col-md-4">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h3 class="panel-title title">{{developer.name}}</h3>
+          </div>
+          <div class="panel-body">
+            <p>
+              Username: {{developer.login}}
+            </p>
+            <p>
+              Bio: {{developer.bio}}
+            </p>
+            <p>
+              Email: {{developer.email}}
+            </p>
+          </div>
+          <div class="panel-footer"><span class="clickable" {{action 'removeFromWatch' developer}}>remove from watchlist</span> / {{'email-link' developer.email}}</div>
         </div>
-        <div class="panel-body">
-          <p>
-            Username: {{developer.login}}
-          </p>
-          <p>
-            Bio: {{developer.bio}}
-          </p>
-          <p>
-            Email: {{developer.email}}
-          </p>
-        </div>
-        <div class="panel-footer"><span class="clickable" {{action 'removeFromWatch' developer}}>remove from watchlist</span> / send email </div>
       </div>
-    </div>
-
-  {{/each}}
-
-</div>
+    {{/each}}
+  </div>
+{{else}}
+  <h3>No developers in your watchlist.</h3>
+{{/if}}
