--- a/app/templates/results.hbs
+++ b/app/templates/results.hbs
@@ -27,7 +27,7 @@
               Email: {{developer.email}}
             </p>
           </div>
-          <div class="panel-footer"><span class="clickable" {{action 'addToWatch' developer}}>add to watchlist</span> / send email </div>
+          <div class="panel-footer"><span class="clickable" {{action 'addToWatch' developer}}>add to watchlist</span> / send email <span class="clickable" {{action 'expandProfile' developer}}>See full profile</span></div>
         </div>
       </div>
 
