add a new helper

--- a/app/templates/results.hbs
+++ b/app/templates/results.hbs
@@ -28,7 +28,7 @@
             </p>
           </div>
 
-          <div class="panel-footer"><span class="clickable" {{action 'addToWatch' developer}}>add to watchlist</span> <span class="clickable" {{action 'expandProfile' developer}}>See full profile</span>{{'email-link' developer.email}}</div>
+          <div class="panel-footer"><span class="clickable" {{action 'addToWatch' developer}}>add to watchlist</span> {{'email-link' developer.email}} / {{'full-profile' developer.email}}</div>
 
         </div>
       </div>
