fix the issue with icons not displaying consistently

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -3,7 +3,7 @@
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <div class="navbar-brand">
-        {{#link-to 'index'}}<img alt="GitHire" src="assets/images/githire.png" class="img-responsive nav-bar-image">{{/link-to}}
+        {{#link-to 'index'}}<img alt="GitHire" src="https://github.com/saeromjoa/github-api-project-ember/blob/master/public/assets/images/githire.png?raw=true" class="img-responsive nav-bar-image">{{/link-to}}
       </div>
     </div>
 
@@ -11,7 +11,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
       <ul class="nav navbar-nav navbar-right">
-        <li>{{#link-to 'watchlist'}}<img src="./assets/images/watchlist.png" class="img-responsive nav-bar-image" alt="add to watchlist" />{{/link-to}}</li>
+        <li>{{#link-to 'watchlist'}}<img src="https://github.com/saeromjoa/github-api-project-ember/blob/master/public/assets/images/watchlist.png?raw=true" class="img-responsive nav-bar-image" alt="watchlist" />{{/link-to}}</li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
