--- a/app/templates/components/watchlist-tile.hbs
+++ b/app/templates/components/watchlist-tile.hbs
@@ -1,27 +1,55 @@
-{{#if watchUser.users}}
+<div class="jumbotron">
+  <div class="container">
+    <p>
+      Developers in your Watchlist:
+    </p>
+  </div>
+</div>
+
+<div class="container">
+  {{#if watchUser.users}}
+
   <div class="row">
     {{#each watchUser.users as |developer|}}
-      <div class="col-md-4">
-        <div class="panel panel-default">
-          <div class="panel-heading">
-            <h3 class="panel-title title">{{developer.name}}</h3>
-          </div>
-          <div class="panel-body">
-            <p>
-              Username: {{developer.login}}
-            </p>
-            <p>
-              Bio: {{developer.bio}}
-            </p>
-            <p>
-              Email: {{developer.email}}
-            </p>
-          </div>
-          <div class="panel-footer"><span class="clickable" {{action 'removeFromWatch' developer}}>remove from watchlist</span> / {{'email-link' developer.email}}</div>
+    <div class="col-md-4">
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h3 class="panel-title title">{{developer.name}}</h3>
         </div>
+        <div class="panel-body">
+          <img src="{{developer.avatar_url}}" alt="avatar" class="img-responsive profile-picture"/>
+          <p>
+            <strong>Username:</strong> {{developer.login}}
+          </p>
+          <p>
+            <strong>Bio:</strong> {{developer.bio}}
+          </p>
+          <p>
+            Email: {{developer.email}}
+          </p>
+        </div>
+
+        <div class="panel-footer">
+          <div class="row">
+            <div class="col-md-4">
+                {{#link-to 'fullcontact' developer.email}}full profile{{/link-to}}
+            </div>
+            <div class="col-md-4 text-center">
+              {{'email-link' developer.email}}
+            </div>
+            <div class="col-md-4">
+              <img src="https://github.com/saeromjoa/github-api-project-ember/blob/master/public/assets/images/remove_watchlist.png?raw=true" {{action 'removeFromWatch' developer}} class="img-responsive watchlist-icon" alt="remove from watchlist"/>
+
+            </div>
+          </div>
+        </div>
+
       </div>
+    </div>
     {{/each}}
   </div>
 {{else}}
   <h3>No developers in your watchlist.</h3>
+
 {{/if}}
+</div>
