add text to the homepage

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -10,6 +10,16 @@ body {
   font-weight: 900;
 }
 
+.blue-title {
+  font-family: 'Raleway', sans-serif;
+  font-weight: 900;
+  color: #368dc9;
+}
+
+.index-content {
+  margin-bottom: 50px;
+}
+
 /*navbar*/
 
 .navbar-default {
@@ -30,10 +40,11 @@ body {
   width: 100%;
   padding-left: 15px;
   padding-right: 15px;
-  font-size: 30px!important;
+  font-size: 35px!important;
   line-height: 50px;
   color: #fff;
   font-weight: 900;
+  margin-bottom: 30px;
   /*margin: 0 auto;*/
 }
 
@@ -62,6 +73,24 @@ body {
   padding-left: 15px;
   padding-right: 15px;
   color: #fff;
+}
+
+.language-input {
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+.form-select {
+  margin-left: 10px;
+}
+
+.index-content {
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.description {
+  margin-top: 20px;
 }
 
 .footer {
