--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -6,8 +6,32 @@
 </div>
 
 <div class="container">
-
-  <h3 class="title">SEARCH RESULTS: </h3>
-
-
+  <div class="row index-content">
+    <div class="col-md-4">
+      <img src="http://masterbranch.com/images/candidate-search-icon.png" alt="search" class="img-responsive center-block"/>
+      <h2 class="blue-title text-center">POWERFUL CANDIDATE SEARCH</h2>
+      <p class="description">
+        We find only the relevant candidates for your requirments. No more boolean searches, complex filters or spending countless hours scanning through the internet to find the right candidates.
+      </p>
+    </div>
+    <div class="col-md-4">
+      <img src="http://masterbranch.com/images/easy-assesment-icon.png" alt="assesment" class="img-responsive center-block"/>
+      <h2 class="blue-title text-center">EASY ASSESMENT</h2>
+      <p class="description">
+        No need to test, decrypt and go over the skills of the candidate. We pre-screen and validate the technical expertise of the hackers. Masterbranch also scores hackers based on contributions and peer review so you can find the very best developers.
+      </p>
+    </div>
+    <div class="col-md-4 text-center">
+      <img src="http://masterbranch.com/images/candidate-profile-icon.png" alt="data sources" class="img-responsive center-block"/>
+      <h2 class="blue-title">DATA SOURCES</h2>
+      <p class="description">
+        <p>
+          GitHub API
+        </p>
+        <p>
+          FullContact API
+        </p>
+      </p>
+    </div>
+  </div>
 </div>
