--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -20,9 +20,8 @@
   {{outlet}}
 
 
-<div class="footer navbar-fixed-bottom">
+<div class="footer">
   <div class="container">
-    footer coming soon
     {{#link-to 'about'}}About{{/link-to}}
     {{#link-to 'faq'}}FAQ{{/link-to}}
   </div>
