add an about me and contact page

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -22,7 +22,11 @@
 
 <div class="footer">
   <div class="container">
-    {{#link-to 'about'}}About{{/link-to}}
-    {{#link-to 'faq'}}FAQ{{/link-to}}
+    <p>
+      {{#link-to 'about'}}About{{/link-to}}
+    </p>
+    <p>
+      {{#link-to 'faq'}}Contact{{/link-to}}
+    </p>
   </div>
 </div>
