--- a/app/templates/faq.hbs
+++ b/app/templates/faq.hbs
@@ -1,17 +1,12 @@
-<div class='container'>
-  <h1>FAQ</h1>
+<div class="jumbotron">
+  <div class="container">
+    <h1>CONTACT</h1>
+  </div>
+</div>
+<div class="container index-content text-center">
+<p>
+  We are located in Epicodus, at Portland, OR!
+</p>
 
-  <h3>Who are we?</h3>
-  <li>See {{#link-to 'about'}}about {{/link-to}}page.</li>
-
-  <h3>Who should use us?</h3>
-  <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
-
-  <h3>Hours of operation/contact info:</h3>
-  <li>M-F 9:00am - 5:00pm</li>
-  <li>We are located in Portland, OR!</li>
-
-<hr>
-
-  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2795.4718941307983!2d-122.67958578478428!3d45.520708637692685!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54950a043c16fc93%3A0x62392a499f2b3951!2s400+SW+6th+Ave%2C+Portland%2C+OR+97204!5e0!3m2!1sen!2sus!4v1478642464732" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2795.4718941307983!2d-122.67958578478428!3d45.520708637692685!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54950a043c16fc93%3A0x62392a499f2b3951!2s400+SW+6th+Ave%2C+Portland%2C+OR+97204!5e0!3m2!1sen!2sus!4v1478642464732" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
 </div>
