update language and city values in the search form

--- a/app/templates/components/search-form.hbs
+++ b/app/templates/components/search-form.hbs
@@ -9,9 +9,9 @@
         <option value="los-angeles">Los Angeles</option>
         <option value="new-york">New York</option>
         <option value="philadelphia">Philadelphia</option>
-        <option value="provo">Provo</option>
         <option value="portland" selected="selected">Portland</option>
         <option value="san-francisco">San Francisco</option>
+        <option value="seattle">Seattle</option>
         <option value="washington-dc">Washington DC</option>
       </select>
 
@@ -19,16 +19,15 @@
     <div class="form-group language-input">
       <label for="language">LANGUAGE:</label>
       <select class="form-control form-select" id="language" onchange={{action 'updateLanguage' value="target.value"}} >
-        <option value="c#">C#</option>
-        <option value="c++">C++</option>
+        <option value="C%23">C#</option>
+        <option value="C%2B%2B">C++</option>
         <option value="CSS">CSS</option>
-        <option value="html">HTML</option>
-        <option value="java">Java</option>
+        <option value="HTML">HTML</option>
+        <option value="Java">Java</option>
         <option value="JavaScript" selected="selected">JavaScript</option>
         <option value="PHP">PHP</option>
-        <option value="python">Python</option>
-        <option value="ruby">Ruby</option>
-        <option value="typescript">TypeScript</option>
+        <option value="Python">Python</option>
+        <option value="Ruby">Ruby</option>
       </select>
 
     </div>
