comment languages with low results

--- a/app/templates/components/search-form.hbs
+++ b/app/templates/components/search-form.hbs
@@ -19,8 +19,8 @@
     <div class="form-group language-input">
       <label for="language">LANGUAGE:</label>
       <select class="form-control form-select" id="language" onchange={{action 'updateLanguage' value="target.value"}} >
-        <option value="C%23">C#</option>
-        <option value="C%2B%2B">C++</option>
+        <!-- <option value="c%23">C#</option>
+        <option value="C%2B%2B">C++</option> -->
         <option value="CSS">CSS</option>
         <option value="HTML">HTML</option>
         <option value="Java">Java</option>
