--- a/app/templates/components/display-profile.hbs
+++ b/app/templates/components/display-profile.hbs
@@ -1,4 +1,12 @@
-{{log fullContact.devProfile}}
-{{fullContact.devProfile.contactInfo.fullName}}
-{{fullContact.devProfile.demographics.gender}}
-{{fullContact.devProfile.demographics.locationGeneral}}
+<div class="jumbotron">
+  <div class="container">
+    <h1>{{fullContact.devProfile.contactInfo.fullName}}</h1>
+  </div>
+</div>
+
+<div class="container">
+  {{log fullContact.devProfile}}
+
+  {{fullContact.devProfile.demographics.gender}}
+  {{fullContact.devProfile.demographics.locationGeneral}}
+</div>
