--- a/app/templates/results.hbs
+++ b/app/templates/results.hbs
@@ -31,7 +31,9 @@
           <div class="panel-footer">
             <div class="row">
               <div class="col-md-4">
+                {{#if developer.email}}
                   {{#link-to 'fullcontact'}}<p {{action 'viewProfile' developer.email}}>full profile</p>{{/link-to}}
+                {{/if}}
               </div>
               <div class="col-md-4 text-center">
                 {{'email-link' developer.email}}
