Adds link to github on image and adds conditional statement around bio

--- a/app/templates/results.hbs
+++ b/app/templates/results.hbs
@@ -16,16 +16,22 @@
             <h3 class="panel-title title">{{developer.name}}</h3>
           </div>
           <div class="panel-body">
-            <img src="{{developer.avatar_url}}" alt="avatar" class="img-responsive profile-picture"/>
+            <a href="{{developer.html_url}}" target="_blank"><img src="{{developer.avatar_url}}" alt="avatar" class="img-responsive profile-picture"/></a>
             <p>
               <strong>Username:</strong> {{developer.login}}
             </p>
-            <p>
-              <strong>Bio:</strong> {{developer.bio}}
-            </p>
-            <p>
-              Email: {{developer.email}}
-            </p>
+            {{#if developer.bio}}
+              <p>
+                Bio: {{developer.bio}}
+              </p>
+            {{else}}
+              <p>
+                Bio not available
+              </p>
+            {{/if}}
+              <p>
+                Email: {{developer.email}}
+              </p>
           </div>
 
           <div class="panel-footer">
