Updates Joannas name in about page

--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -9,25 +9,25 @@
 
   <div class="row">
     <div class="col-md-3">
-      <a href="https://github.com/grayhildreth"><div class="well text-center team-profile">
+      <a href="https://github.com/grayhildreth" target="_blank"><div class="well text-center team-profile">
         <img src="https://avatars2.githubusercontent.com/u/18670578?v=3&s=460" alt="gray" class="img-responsive center-block"/>
         <h4 class="blue-title ">GRAY HILDRETH</h4>
       </div></a>
     </div>
     <div class="col-md-3">
-      <a href="https://github.com/saeromjoa"><div class="well text-center team-profile">
+      <a href="https://github.com/saeromjoa" target="_blank"><div class="well text-center team-profile">
         <img src="https://avatars1.githubusercontent.com/u/22183476?v=3&s=460" alt="marta" class="img-responsive center-block"/>
-        <h4 class="blue-title ">JOANA ANDERSON</h4>
+        <h4 class="blue-title ">JOANNA ANDERSON</h4>
       </div></a>
     </div>
     <div class="col-md-3">
-      <a href="https://github.com/trivassi"><div class="well text-center team-profile">
+      <a href="https://github.com/trivassi" target="_blank"><div class="well text-center team-profile">
         <img src="https://avatars0.githubusercontent.com/u/17020204?v=3&s=460" alt="marta" class="img-responsive"/>
         <h4 class="blue-title ">THOMAS RIVAS</h4>
       </div></a>
     </div>
     <div class="col-md-3">
-      <a href="https://github.com/mrtsanchez"><div class="well text-center team-profile">
+      <a href="https://github.com/mrtsanchez" target="_blank"><div class="well text-center team-profile">
         <img src="https://avatars0.githubusercontent.com/u/20113678?v=3&s=460" alt="marta" class="img-responsive"/>
         <h4 class="blue-title ">MARTA SÁNCHEZ</h4>
       </div></a>
