updates conditional statement for email

--- a/app/templates/results.hbs
+++ b/app/templates/results.hbs
@@ -28,7 +28,7 @@
               <p>
               </p>
             {{/if}}
-            {{#if developer.bio}}
+            {{#if developer.email}}
               <p>
                 Email: {{developer.email}}
               </p>
