--- a/app/templates/results.hbs
+++ b/app/templates/results.hbs
@@ -42,7 +42,7 @@
             <div class="row">
               <div class="col-md-4">
                 {{#if developer.email}}
-                  {{#link-to 'fullcontact'}}<p {{action 'viewProfile' developer.email}}>full profile</p>{{/link-to}}
+                  {{#link-to 'fullcontact'}}<p {{action 'viewProfile' developer}}>Full Profile</p>{{/link-to}}
                 {{/if}}
               </div>
               <div class="col-md-4 text-center">
