fix the fullcontact router

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -9,7 +9,7 @@
   <div class="row index-content">
     <div class="col-md-4">
       <img src="http://masterbranch.com/images/candidate-search-icon.png" alt="search" class="img-responsive center-block"/>
-      <h2 class="title-blue text-center">POWERFUL CANDIDATE SEARCH</h2>
+      <h2 class="blue-title text-center">POWERFUL CANDIDATE SEARCH</h2>
       <p class="description">
         We find only the relevant candidates for your requirments. No more boolean searches, complex filters or spending countless hours scanning through the internet to find the right candidates.
       </p>
