--- a/app/templates/components/watchlist-tile.hbs
+++ b/app/templates/components/watchlist-tile.hbs
@@ -17,28 +17,40 @@
           <h3 class="panel-title title">{{developer.name}}</h3>
         </div>
         <div class="panel-body">
-          <img src="{{developer.avatar_url}}" alt="avatar" class="img-responsive profile-picture"/>
+          <a href="{{developer.html_url}}" target="_blank"><img src="{{developer.avatar_url}}" alt="avatar" class="img-responsive profile-picture center-block"/></a>
           <p>
             <strong>Username:</strong> {{developer.login}}
           </p>
-          <p>
-            <strong>Bio:</strong> {{developer.bio}}
-          </p>
-          <p>
-            Email: {{developer.email}}
-          </p>
+          {{#if developer.bio}}
+            <p>
+              Bio: {{developer.bio}}
+            </p>
+          {{else}}
+            <p>
+            </p>
+          {{/if}}
+          {{#if developer.email}}
+            <p>
+              Email: {{developer.email}}
+            </p>
+            {{else}}
+              <p>
+              </p>
+            {{/if}}
         </div>
 
         <div class="panel-footer">
           <div class="row">
             <div class="col-md-4">
-                {{#link-to 'fullcontact' developer.email}}full profile{{/link-to}}
+              {{#if developer.email}}
+                {{#link-to 'fullcontact' developer.email}}<p {{action 'viewProfile' developer}}>Full Profile</p>{{/link-to}}
+              {{/if}}
             </div>
             <div class="col-md-4 text-center">
               {{'email-link' developer.email}}
             </div>
             <div class="col-md-4">
-              <img src="https://github.com/saeromjoa/github-api-project-ember/blob/master/public/assets/images/remove_watchlist.png?raw=true" {{action 'removeFromWatch' developer}} class="img-responsive watchlist-icon" alt="remove from watchlist"/>
+              <img src="https://github.com/saeromjoa/github-api-project-ember/blob/master/public/assets/images/add_watchlist.png?raw=true" {{action 'addToWatch' developer}} class="img-responsive watchlist-icon" alt="add to watchlist"/>
 
             </div>
           </div>
@@ -46,6 +58,7 @@
 
       </div>
     </div>
+
     {{/each}}
   </div>
 {{else}}
