add the remove from watchlist button that we accidentally removed earlier

--- a/app/templates/components/watchlist-tile.hbs
+++ b/app/templates/components/watchlist-tile.hbs
@@ -50,7 +50,7 @@
               {{'email-link' developer.email}}
             </div>
             <div class="col-md-4">
-              <img src="https://github.com/saeromjoa/github-api-project-ember/blob/master/public/assets/images/add_watchlist.png?raw=true" {{action 'addToWatch' developer}} class="img-responsive watchlist-icon" alt="add to watchlist"/>
+              <img src="https://github.com/saeromjoa/github-api-project-ember/blob/master/public/assets/images/remove_watchlist.png?raw=true" {{action 'removeFromWatch' developer}} class="img-responsive watchlist-icon" alt="add to watchlist"/>
 
             </div>
           </div>
