try to add a twitter timeline, failed

--- a/app/templates/components/display-profile.hbs
+++ b/app/templates/components/display-profile.hbs
@@ -51,6 +51,9 @@
             </p>
           {{/if}}
         </div>
+        <div id="twitter">
+          <!-- <a class="twitter-timeline" href="{{fullContact.twitter_user}}">Tweets by TwitterDev</a> -->
+        </div>
     </div>
   </div>
 </div>
