--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -18,7 +18,7 @@
       <img src="http://masterbranch.com/images/easy-assesment-icon.png" alt="assesment" class="img-responsive center-block"/>
       <h2 class="blue-title text-center">EASY ASSESMENT</h2>
       <p class="description">
-        No need to test, decrypt and go over the skills of the candidate. We pre-screen and validate the technical expertise of the hackers. Masterbranch also scores hackers based on contributions and peer review so you can find the very best developers.
+        No need to test, decrypt and go over the skills of the candidate. We pre-screen and validate the technical expertise of the hackers so you can find the very best developers.
       </p>
     </div>
     <div class="col-md-4 text-center">
